--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
+    "prettier": "prettier src/*.{ts,vue} && prettier src/**/*.{ts,vue}",
+    "prettier:fix": "prettier -w src/*.{ts,vue} && prettier -w src/**/*.{ts,vue}",
     "lint": "eslint src/*.{ts,vue} && eslint src/**/*.{ts,vue}",
-    "lint:fix": "eslint --fix src/*.{ts,vue} && eslint --fix src/**/*.{ts,vue}"
+    "lint:fix": "eslint --fix src/*.{ts,vue} && eslint --fix src/**/*.{ts,vue}",
+    "format": "yarn prettier:fix && yarn lint:fix"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -17,9 +20,11 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
