fix: PrettierとLintにて競合している箇所を修正

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,4 +10,8 @@ parserOptions:
 plugins:
   - vue
   - '@typescript-eslint'
-rules: {}
+rules:
+  vue/max-attributes-per-line:
+    - error
+    - singleline: 5
+      multiline: 1
