feat: パスエイリアスを追加
yarn add -D vite-tsconfig-paths @types/node

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,3 +15,12 @@ rules:
     - error
     - singleline: 5
       multiline: 1
+  no-restricted-imports:
+    - error
+    - patterns:
+        - "../*"
+        - "./*"
+        - "./assets/*"
+        - "./components/*"
+        - "./pages/*"
+        - "./public/*"
