--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.1.0",
@@ -27,6 +28,7 @@
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
+    "vite-tsconfig-paths": "^4.2.0",
     "vue-tsc": "^1.4.2"
   }
 }
