--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "~/*": ["public/*"],
+    },
+    "types": ["node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
