--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format": "yarn prettier:fix && yarn lint:fix"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
