--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format": "yarn prettier:fix && yarn lint:fix"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
