--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
