--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "astro": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-astro": "^0.29.0",
+    "eslint-plugin-import": "^2.28.1"
   }
 }
