--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
     "eslint-plugin-astro": "^0.29.0",
     "eslint-plugin-import": "^2.28.1",
-    "postcss-html": "^1.5.0"
+    "postcss-html": "^1.5.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0"
   }
 }
