--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
     "eslint-plugin-import": "^2.28.1",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.0"
+    "prettier-plugin-astro": "^0.12.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
+    "stylelint-no-unsupported-browser-features": "^7.0.0",
+    "stylelint-prettier": "^4.0.2",
+    "stylelint-scss": "^5.2.0"
   }
 }
