--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/react-dom": "^18.0.6",
     "astro": "^3.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
