--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "20.3"
+          node-version-file: ./.node-version
           cache: pnpm
 
       - name: Setup AWS CLI
