--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "astro": "^4.16.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
