--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "tsc --noEmit && prettier --write . && pnpm eslint --fix && pnpm stylelint --fix"
   },
   "dependencies": {
+    "@astrojs/mdx": "^3.1.9",
     "@astrojs/react": "^3.6.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
